--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "0.0.0-experimental-5faf377df",
-    "react-dom": "0.0.0-experimental-5faf377df",
-    "react-scripts": "3.0.1",
     "bootstrap": "^4.5.3",
-    "react-bootstrap": "^1.4.0"
+    "react": "0.0.0-experimental-5faf377df",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "0.0.0-experimental-5faf377df",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
