--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,13 @@
   "name": "vocabulary-react",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "react": "0.0.0-experimental-5faf377df",
     "react-bootstrap": "^1.4.0",
+    "react-burger-menu": "^3.0.3",
     "react-dom": "0.0.0-experimental-5faf377df",
     "react-scripts": "3.0.1"
   },
