--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development PORT=4000 nodemon --exec babel-node ./src/index.js"
+    "start": "cross-env NODE_ENV=development PORT=4000 nodemon --exec babel-node ./src/index.js",
+    "build": "babel src --out-dir ./build"
   },
   "author": "",
   "license": "ISC",
