--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^1.4.0",
     "react-burger-menu": "^3.0.3",
     "react-dom": "0.0.0-experimental-5faf377df",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
